--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "daisyui": "^2.51.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
